# push_feedback_wb_bot

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.env-template/: .dev.env-template  .prod.env-template
compose/: Dockerfile  Dockerfile.prod  entrypoint.prod.sh  entrypoint.sh  traefik.prod.toml
compose/django/: start-bot.sh  start-django.prod.sh  start-django.sh
compose/django/celery/: start-beat.sh  start-flower.sh  start-worker.sh
src/: manage.py
src/apps/bot/: admin.py  apps.py  bots.py  models.py  tasks.py  tests.py
src/apps/bot/management/commands/: bot.py
src/apps/bot/migrations/: 0001_initial.py  0002_alter_telegramuser_unactive.py  0003_alter_telegramuser_options_and_more.py  0004_alter_telegramuser_options_and_more.py  0005_alter_telegramuser_options_and_more.py  0006_telegramuser_wbtoken_alter_telegramuser_user_id.py  0007_telegramuser_temp_token.py  0008_telegramuser_notification_and_more.py
src/apps/bot/utils/: constants.py  markups.py  tools.py  txts.py
src/apps/polls/: admin.py  apps.py  models.py  tests.py
src/apps/polls/management/commands/: celery_worker.py
src/apps/polls/migrations/: 0001_initial.py  0002_rename_vendorcode_trackedarticle_article_and_more.py  0003_remove_trackedarticle_name.py  0004_feedbackphoto.py  0005_personal_sheetid.py  0006_alter_personal_sheetid.py  0007_remove_personal_sheetid.py
src/core/: __init__.py  celery.py  settings.py
