[tool.poetry]
name = "django-tg-bot-template"
version = "0.1.0"
description = ""
authors = ["layred <layred.dota2@mail.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
celery = "^5.2.7"
gunicorn = "^20.1.0"
flower = "^1.2.0"
cryptography = "^39.0.2"
whitenoise = "^6.4.0"
Pillow = "^9.4.0"
redis = "^4.5.1"
django-celery-beat = "^2.4.0"
pyTelegramBotAPI = "^4.10.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
pytest-django = "^4.5.2"
pre-commit = "^3.1.1"
gevent = "^22.10.2"
psycopg2-binary = "^2.9.5"
django-cors-headers = "^3.14.0"

[tool.poetry.group.dev.dependencies]
Django = "^4.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
